# dfp-number

./: Cargo.toml  README.md  Taskfile.yml
src/: decimal128.rs  lib.rs
tests/decimal128/: decimal128_display.rs
