[package]
name = "dfp-number"
version = "0.0.11"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Decimal floating-point arithmetic for Rust"
documentation = "https://docs.rs/dfp-number"
repository = "https://github.com/EngosSoftware/dfp-number.git"
keywords = ["decimal", "floating", "point", "arithmetic"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dfp-number-sys = "0.2.13"
